hphp/hack/test/typecheck/as_expression/invalid_hint_generic.php
<?hh // strict

function foo<T>(mixed $x): void {
  $x as T;
  hh_show($x);
}
